--- a/src/app/components/video-tekst/video-tekst.component.html
+++ b/src/app/components/video-tekst/video-tekst.component.html
@@ -1,4 +1,4 @@
-<div class="video-tekst-container" >
+<div @titleAnimation class="video-tekst-container" >
     <div class="video-tekst-first" > 
         <iframe 
         src="http://www.youtube.com/embed/W7qWa52k-nE">
