--- a/src/app/pages/verkoop/verkoop-details/verkoop-details.component.scss
+++ b/src/app/pages/verkoop/verkoop-details/verkoop-details.component.scss
@@ -5,6 +5,7 @@ img {
 .back-button {
     margin: auto;
     width: 80%;
+    max-width: 1200px;
     margin-top: -30px;
     margin-bottom: 40px;
     display: flex;
