--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-header-new-new></app-header-new-new>
 <splash-screen></splash-screen>
-<router-outlet></router-outlet>
+<div id="page" ngClass="routeContainer" [@routeAnimation]="getDepth(myOutlet)">
+    <router-outlet #myOutlet="outlet"></router-outlet>
+</div>
+
 <app-footer></app-footer>
