--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,15 +11,17 @@
         </div>
         <div class="footer-total-two">
             <a href="">DIENSTEN</a>
-            <a class="a-dun" href="">Aan & Verkoop</a>
-            <a class="a-dun" href="">Advies</a>
-            <a class="a-dun" href="">Renovatie & Transformatie</a>
+            <a routerLink="/verkoop"  class="a-dun" href="">Aan & Verkoop</a>
+            <a routerLink="/advies"  class="a-dun" href="">Advies</a>
+            <a routerLink="/renovatie"  class="a-dun" href="">Renovatie & Transformatie</a>
         </div>
         <hr>
         <div class="footer-total-three">
-            <a href="">HOME</a>
-            <a href="">OVER</a>
-            <a href="">CONTACT</a>
+
+            <a routerLink="/" href="">HOME</a>
+            <a routerLink="/team" href="">TEAM</a>
+            <a routerLink="/" href="">OVER</a>
+            <a routerLink="/contact" href="">CONTACT</a>
         </div>
     </div>
 </footer>
