--- a/src/app/components/image-background-animation/image-background-animation.component.html
+++ b/src/app/components/image-background-animation/image-background-animation.component.html
@@ -2,6 +2,6 @@
         <img [ngStyle]="styles" src="assets/chandeleer.png" alt="">
     <div [ngStyle]="shadowStyle" class="shadow"></div>
     <div class="image-title">
-        <h1> {{ title }}</h1>
+        <h1 [@titleAnimation]> {{ title }}</h1>
     </div>
 </div>
