--- a/src/app/components/image-background/image-background.component.scss
+++ b/src/app/components/image-background/image-background.component.scss
@@ -7,6 +7,7 @@ img {
     position: absolute;
     opacity: 1;
     z-index: -1;
+    margin-top: -70px;
 }
 
 .shadow {
@@ -19,6 +20,7 @@ img {
     z-index: 0;
     background-color: #000000;
     transition: 0.6s ease-in-out;
+    margin-top: -70px;
 }
 
 .background_change {
