--- a/src/app/components/image-tekst/image-tekst.component.html
+++ b/src/app/components/image-tekst/image-tekst.component.html
@@ -1,4 +1,4 @@
-<div id="over" class="image-tekst-container" >
+<div class="image-tekst-container" >
     <div class="image-tekst-first" > 
         <img class="oscar-foto" src="assets/Foto_Oscar.jpg" alt="">
         <img class="masterclass" src="assets/masterclass.svg" alt="">
@@ -7,14 +7,24 @@
         <div class="image-tekst-second-text">
             <p>OVER</p>
             <h5>OSR <span>| Real Estate | Advisory | Investments </span></h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, 
-                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+            <p>
+                OSR Real Estate is een jong en dynamisch bedrijf. In november 2019 
+                is er gestart met het investeren in residentieel vastgoed. 
+                In de daaropvolgende tijd is er stevig gebouwd aan een actief en betrouwbaar netwerk. 
+                OSR Real Estate investeert bij voorkeur voor de langere termijn, in heel Nederland, maar heeft de focus op de Randstedelijke gebieden. 
+                Op professionele wijze en met een duurzaam oogmerk wordt het vastgoed geëxploiteerd 
+                <br>
+                <br>
+                Naast het investeren biedt OSR Real Estate met het initiatief, vastberadenheid en de kennis over zaken, ook een adviserende rol voor de klant. Met de geruime ervaring kunnen wij goed inspelen op de telkens wijzigende vastgoedmarkt, daarom kunnen wij onze klanten voorzien van een doordacht en goed advies. 
+                <br>
+                <br>
+                Tevens zijn wij gespecialiseerd in het renoveren en transformeren van residentieel vastgoed.
+                </p>
         </div>
         <div class="image-tekst-buttons">
             <button class="btn-large-other">info@osr-realestate.nl</button>
             <button class="btn-large-other">+31 6 41 55 02 27</button>
+            <button class="btn-large-other">ONS TEAM</button>
 
         </div>
     </div>
