--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <app-image-background [styles]="{height:'100vh'}"></app-image-background>
 <app-front-blocks></app-front-blocks>
 <app-counter-blocks></app-counter-blocks>
+<div id="over"></div>
 <app-image-tekst #target></app-image-tekst>
