--- a/src/app/pages/verkoop/verkoop-details/verkoop-details.component.html
+++ b/src/app/pages/verkoop/verkoop-details/verkoop-details.component.html
@@ -1,15 +1,21 @@
 <app-image-background-animation 
     [title]="'Van Ostadestraat 46'" 
-    [styles]="{height:'35vh'}"
-    [shadowStyle]="{height:'35vh'}"
+    [styles]="{height:'32vh'}"
+    [shadowStyle]="{height:'32vh'}"
     ></app-image-background-animation> 
     <div (click)="backClicked()" class="back-button">
         <img class="back" src="assets/arrow-btn-large-left.svg" alt="">
         <h6>Terug naar woningen</h6>
     </div>
-    <app-description-blocks></app-description-blocks>
+    <app-description-blocks
+        [paragraph]="'{{}}'" 
+        [button]="'{{}}'" 
+        [infoOne]="'{{}}'" 
+        [infoTwo]="'{{}}'" 
+        [infoThree]="'{{}}'" 
+    ></app-description-blocks>
     <div class="pictures-total">
-        <h6>pictures</h6>
+        <h6>{{house}}</h6>
         <img  class="pictures" src="assets/arrow-btn-large-down.svg" alt="">
     </div>
     <app-carousel
