--- a/src/app/components/header-new-new/pop-up/pop-up.component.html
+++ b/src/app/components/header-new-new/pop-up/pop-up.component.html
@@ -1,4 +1,4 @@
-<div (click)="popUpRemove()" [class.popup_change]="popup_variable" class="pop-up-background">
+<div [class.popup_change]="popup_variable" class="pop-up-background">
     <div class="pop-up">
         <div class="pop-up-header">
         <img (click)="popUpRemove()" src="assets/arrow-btn-left-noshadow.svg" alt="">
