--- a/src/app/components/image-background-animation/image-background-animation.component.html
+++ b/src/app/components/image-background-animation/image-background-animation.component.html
@@ -1,4 +1,4 @@
-<div class="image-background">
+<div [ngStyle]="margintop" class="image-background">
         <img [ngStyle]="styles" src="assets/chandeleer.png" alt="">
     <div [ngStyle]="shadowStyle" class="shadow"></div>
     <div class="image-title">
