--- a/src/app/pages/team/team.component.html
+++ b/src/app/pages/team/team.component.html
@@ -1,6 +1,7 @@
 <app-image-background-animation 
     [title]="'Team'" 
     [styles]="{height:'32vh'}"
+    [margintop]="{marginBottom:'80px'}"
     >
 </app-image-background-animation>
 <app-team-member></app-team-member>
