--- a/src/app/components/header-new-new/header-new-new.component.html
+++ b/src/app/components/header-new-new/header-new-new.component.html
@@ -36,7 +36,7 @@
                   <li (click)="toAbout()" (click)="closeNav()" class="nav-link" style="--i: 1.6s">
                         <a routerLink="/" >OVER<i class="fas fa-caret-down"></i></a>
                     </li>
-                    <li (click)="closeNav()"  class="nav-link" style="--i: 1.85s"><a (click)="popUpClick()" class="btn-large">UW VASTGOED VERKOPEN?<i class="fas fa-caret-down"></i></a>
+                    <li (click)="closeNav()"  class="nav-link" style="--i: 1.85s"><a (click)="onAddPopup()" class="btn-large">UW VASTGOED VERKOPEN?<i class="fas fa-caret-down"></i></a>
                     </li>
                 </ul>
             </div>
