--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header-new-new></app-header-new-new>
-<!-- <splash-screen></splash-screen> -->
+<splash-screen></splash-screen>
 <div id="page" ngClass="routeContainer" [@routeAnimation]="getDepth(myOutlet)">
     <router-outlet #myOutlet="outlet"></router-outlet>
 </div>
