--- a/src/app/components/header-new-new/header-new-new.component.scss
+++ b/src/app/components/header-new-new/header-new-new.component.scss
@@ -26,6 +26,9 @@ header{
     width: 100%;
     z-index: 3;
     transition: 0.5s ease-in-out;
+    top: 0;  
+    bottom: 0;  
+    left: 0 
 
     
 }
