--- a/src/app/pages/verkoop/verkoop-details/verkoop-details.component.html
+++ b/src/app/pages/verkoop/verkoop-details/verkoop-details.component.html
@@ -15,7 +15,7 @@
         [infoThree]="'{{}}'" 
     ></app-description-blocks>
     <div class="pictures-total">
-        <h6>{{house}}</h6>
+        <h6>{{house?.id}}</h6>
         <img  class="pictures" src="assets/arrow-btn-large-down.svg" alt="">
     </div>
     <app-carousel
