--- a/src/app/components/image-tekst/image-tekst.component.html
+++ b/src/app/components/image-tekst/image-tekst.component.html
@@ -1,12 +1,12 @@
 <div class="image-tekst-container" >
     <div class="image-tekst-first" > 
-        <img class="oscar-foto" src="assets/Foto_Oscar.jpg" alt="">
-        <img class="masterclass" src="assets/masterclass.svg" alt="">
+        <img class="oscar-foto" src="assets/osr-group.svg" alt="">
+        <!-- <img class="masterclass" src="assets/masterclass.svg" alt=""> -->
     </div>
     <div class="image-tekst-second" >
         <div class="image-tekst-second-text">
-            <p>OVER</p>
-            <h5>OSR <span>| Real Estate | Advisory | Investments </span></h5>
+            <h5>Over OSR </h5>
+            <hr>
             <p>
                 OSR Real Estate is een jong en dynamisch bedrijf. In november 2019 
                 is er gestart met het investeren in residentieel vastgoed. 
@@ -24,7 +24,7 @@
         <div class="image-tekst-buttons">
             <button class="btn-large-other">info@osr-realestate.nl</button>
             <button class="btn-large-other">+31 6 41 55 02 27</button>
-            <button class="btn-large-other">ONS TEAM</button>
+            <button routerLink="/team" class="btn-large-other">ONS TEAM</button>
 
         </div>
     </div>
