--- a/src/app/components/video-tekst/video-tekst.component.html
+++ b/src/app/components/video-tekst/video-tekst.component.html
@@ -1,18 +1,27 @@
 <div @titleAnimation class="video-tekst-container" >
     <div class="video-tekst-first" > 
         <iframe 
-        src="http://www.youtube.com/embed/W7qWa52k-nE">
+        src="https://www.youtube.com/embed/1YIqJSuQ-p4">
         </iframe>
     </div>
     <div class="video-tekst-second" >
         <div class="video-tekst-second-text">
-            <p class="p-klein">over</p>
-            <h5>{{title}}<span></span></h5>
-            <p>{{ paragraph }}</p>
+            <h5>Renovatie & Transformatie<span></span></h5>
+            <hr>
+            <p>Bij OSR RE zijn wij altijd opzoek naar de best mogelijk manier. Zo ook tijdens renovaties en transformaties.  Twijfelt u of heet u juist een geschikt object? Voor meer informatie kunt u altijd vrijblijvend contact met ons opnemen.  </p>
+            <button class="btn-large-other">CONTACT</button>
         </div>
-        <div class="video-tekst-buttons">
-            <button class="btn-large-other">info@osr-realestate.nl</button>
-            <button class="btn-large-other">+31 6 41 55 02 27</button>
+        <div class="video-tekst-third" >
+        <div class="video-tekst-third-first">
+            <h4>Transformaties<span></span></h4>
+            <hr>
+            <p>Transformaties zijn er op verschillende manieren. U kunt een kantoor- of winkelpand transformeren naar woningen. Maar ook kunt u een zelfstandige woning transformeren naar meerdere onzelfstandige woningen. </p>
+        </div>
+        <div class="video-tekst-third-second">
+            <h4>Renovaties<span></span></h4>
+            <hr>
+            <p>Bij renovaties kijken wij altijd naar de meest efficiënt mogelijke indeling. Tevens wordt er bekeken wat er bewerkstelligd kan worden binnen de huidige regelgeving. Hoeveel m2 kan er worden aangebouwd, opgebouwd of een dakkapel worden toegevoegd? </p>
+        </div>
         </div>
     </div>
 </div>
