--- a/src/app/components/header-new-new/header-new-new.component.scss
+++ b/src/app/components/header-new-new/header-new-new.component.scss
@@ -323,6 +323,24 @@ section{
         transition: .65s;
     }
 
+    // .nav-btn{
+    //     position: fixed;
+    //     height: calc(100vh);
+    //     top: 0rem;
+    //     right: 0;
+    //     width: 300px;
+    //     background-color: #2b2b2b ;
+    //     flex-direction: column;
+    //     align-items: center;
+    //     justify-content: space-between;
+    //     overflow-x: hidden;
+    //     overflow-y: auto;
+    //     transform: translateX(200px);
+    //     transition: .65s;
+    //     top: 0;
+    //     right: 0;
+    // }
+
 
     #check:checked ~ .nav-btn{
         transform: translateX(0);
