--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -1,61 +1,49 @@
-
-.review-whole-total {
-    display: flex;
-    flex-direction: column;
+.review-container {
+    display: grid;
+    grid-template-columns: auto;
+    margin: auto;
 }
 
 .review-whole {
     width: 78%;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     padding: 20px;
     background-color: #F7F7F7;
-    border-radius: 10px;
+    border-radius: 5px;
     max-width: 350px;
     margin-bottom: 20px;
+
 }
 
 .review-whole-first {
     display: flex;
     align-items: center;
-    
 }
 
 .review-whole-first img {
     margin-right: 20px;
 }
 
-
-.review-whole-third {
-    display: flex;
-    align-items: center;
-    margin-top: 30px;
-    justify-content: space-between;
-    width: 140px;
-    cursor: pointer;
-    margin: auto;
-    margin-top: 40px;
-}
-
-.review-whole-third img {
-    transition: transform .2s ease-in-out;
-}
-
-.review-whole-third:hover img {
-    transform: translate3d(2px, 0px, 0px);
-    transition: transform .2s ease-in-out;
-}
-
 h4 {
     color: black;
 }
 
-@media only screen and (min-width: 1200px) { 
+@media only screen and (min-width: 720px) {
+    .review-container {
+        grid-template-columns: auto auto;
+        max-width: 900px;
+    }
+
+}
+
+@media only screen and (min-width: 1100px) { 
    
-    .review-whole-total {
-        display: flex;
-        flex-direction: row;
-        max-width: 1250px;
-        margin: auto;
+    .review-container {
+        grid-template-columns: auto auto auto;
+        max-width: 1220px;
+        margin-top: 48px
+
     }
 
 }
