--- a/src/app/components/video-tekst/video-tekst.component.scss
+++ b/src/app/components/video-tekst/video-tekst.component.scss
@@ -25,18 +25,25 @@ iframe {
 .video-tekst-second {
     text-align:initial;
     margin-top: 30px;
-    max-width: 400px;
+    max-width: 600px;
     margin: auto;
     margin-top: 30px;
     width: 95%;
     
 }
 
-.video-tekst-second-text {
+.video-tekst-second-text  {
     background-color: #F8F8F8;
     padding: 20px;
     border-radius: 5px;
 
+}
+
+.video-tekst-third div {
+    background-color: #F8F8F8;
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 24px;
 }
 
 .video-tekst-buttons {
@@ -61,33 +68,23 @@ h5 {
     margin-bottom: 5px;
 }
 
-@media only screen and (min-width: 500px) {
-
-    .video-tekst-buttons {
-        margin-top: 20px;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-     
-    }
-    
-    .video-tekst-buttons button {
-        margin-right: auto;
-        margin-bottom: 10px;
-        
-    }
-
+h4 {
+    color: black;
 }
+
+button {
+    margin-top: 8px;
+}
+
 
 @media only screen and (min-width: 900px) {
     
     .video-tekst-container {
         margin-bottom: 140px;
-        max-width: 1100px;
+        max-width: 1200px;
         flex-direction: row;
         align-items: center;
     }
-
 
     .video-tekst-first {
         margin-top: 0px;
@@ -97,7 +94,6 @@ h5 {
         margin: auto;
         width: 90%;
         max-width: 600px;
-    
     }
     
     iframe {
@@ -108,6 +104,27 @@ h5 {
         max-width: 600px;
         height: 350px;
     }
-    
+}
+
+    @media only screen and (min-width: 1200px) {
+        
+        .video-tekst-second {
+            margin-top: 0px;
+        }
+        
+        .video-tekst-third {
+            display: flex;
+        }
+
+        .video-tekst-third-first {
+            margin-right: 12px;
+        }
+
+        .video-tekst-third-second {
+            margin-left: 12px;
+        }
+
+
+
 
 }
