--- a/src/app/pages/verkoop/verkoop-details/verkoop-details.component.scss
+++ b/src/app/pages/verkoop/verkoop-details/verkoop-details.component.scss
@@ -2,6 +2,10 @@ img {
     transition: transform .2s ease-in-out;
 }
 
+.swiper-pagination {
+    margin-top: 50px;
+}
+
 .back-button {
     margin: auto;
     width: 80%;
@@ -21,6 +25,7 @@ img {
     justify-content: space-between;
     cursor: pointer;
     margin-top: 50px;
+    margin-bottom: 50px;
     
 }
 
@@ -43,7 +48,55 @@ h4 {
     transition: transform .2s ease-in-out;
 }
 
+.description-container {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    align-content: center;
+}
 
+.description-first {
+    width: 80%;
+    max-width: 500px;
+    padding: 20px;
+    background-color: #f4f4f4;
+    margin: auto;
+    border-radius: 10px;
+}
+
+.description-first button {
+    margin-top: 10px;
+}
+
+.description-second {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.description-second div {
+    width: 170px;
+    height: 155px;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+.description-second h6 {
+    margin-top: 50px;
+}
+
+.description-second h4 {
+    color: black;
+}
+
+@media only screen and (min-width: 600px) {
+    .description-second {
+        flex-direction: row;
+    }   
+}
 
 @media only screen and (min-width: 800px) { 
 
@@ -57,3 +110,12 @@ h4 {
         cursor:pointer;
     }
 }
+
+
+@media only screen and (min-width: 1200px) {
+    .description-container {
+        flex-direction: row;
+        max-width: 1200px;
+    }   
+}
+
