--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -2,5 +2,5 @@
     [config]="config"
     class="mySwiper"
   >
-    <ng-template *ngFor="let image of images" swiperSlide> <img src="{{ image.src }}" alt=""> </ng-template>
+    <ng-template *ngFor="let image of images" swiperSlide> <img src="{{ image }}" alt=""> </ng-template>
   </swiper>
