--- a/src/app/components/counter-blocks/counter-blocks.component.html
+++ b/src/app/components/counter-blocks/counter-blocks.component.html
@@ -1,9 +1,9 @@
 <div (scroll)="($event)" class="counter-block-container">
     <div class="counter-block">
         <div class="counter-block-first">
-            <h6>Huidige portefeuille</h6>
+            <h6>Woningen verkocht</h6>
             <div>
-                <h3>Panden <span>{{clientcount}}</span></h3>
+                <h3>Woningen <span>>6</span></h3>
             </div>
             <img src="assets/panden.svg" alt="">
         </div>
@@ -11,7 +11,7 @@
         <div class="counter-block-second">
             <h6>Vierkante Meters</h6>
             <div>
-                <h3><span>{{projectcount}}</span> ㎡  </h3>
+                <h3><span>>1500</span> ㎡  </h3>
             </div>
             <img src="assets/m2.svg" alt="">
         </div>     
