--- a/src/app/components/counter-blocks/counter-blocks.component.html
+++ b/src/app/components/counter-blocks/counter-blocks.component.html
@@ -3,15 +3,15 @@
         <div class="counter-block-first">
             <h6>Woningen verkocht</h6>
             <div>
-                <h3>Woningen <span>>6</span></h3>
+                <h3><span>>6</span></h3>
             </div>
             <img src="assets/panden.svg" alt="">
         </div>
         <hr>
         <div class="counter-block-second">
-            <h6>Vierkante Meters</h6>
+            <h6>Huidige vierkante meters</h6>
             <div>
-                <h3><span>>1500</span> ㎡  </h3>
+                <h3><span>>800</span> ㎡  </h3>
             </div>
             <img src="assets/m2.svg" alt="">
         </div>     
