--- a/src/app/components/header-new-new/pop-up/pop-up.component.scss
+++ b/src/app/components/header-new-new/pop-up/pop-up.component.scss
@@ -21,6 +21,8 @@
     margin-top: 30px;
     border-radius: 10px 10px 10px 10px;
     z-index: 1000;
+    transition: 1s
+
 
 }
 
@@ -120,7 +122,13 @@ button {
     margin-top: 20px;
 }
 
+input.ng-invalid {
+    border: 1px solid red;
+}
 
+.disabled {
+    
+}
 
 
 @media only screen and (min-width: 1000px) { 
