--- a/src/app/components/video-tekst/video-tekst.component.html
+++ b/src/app/components/video-tekst/video-tekst.component.html
@@ -9,9 +9,12 @@
             <h5>Renovatie & Transformatie<span></span></h5>
             <hr>
             <p>Bij OSR RE zijn wij altijd opzoek naar de best mogelijk manier. Zo ook tijdens renovaties en transformaties.  Twijfelt u of heet u juist een geschikt object? Voor meer informatie kunt u altijd vrijblijvend contact met ons opnemen.  </p>
-            <button class="btn-large-other">CONTACT</button>
+            <button (click)="toAbout()" class="btn-large-other">CONTACT</button>
         </div>
-        <div class="video-tekst-third" >
+    </div>
+</div>
+
+        <!-- <div class="video-tekst-third" >
         <div class="video-tekst-third-first">
             <h4>Transformaties<span></span></h4>
             <hr>
@@ -22,6 +25,4 @@
             <hr>
             <p>Bij renovaties kijken wij altijd naar de meest efficiënt mogelijke indeling. Tevens wordt er bekeken wat er bewerkstelligd kan worden binnen de huidige regelgeving. Hoeveel m2 kan er worden aangebouwd, opgebouwd of een dakkapel worden toegevoegd? </p>
         </div>
-        </div>
-    </div>
-</div>
+        </div> -->
