--- a/src/app/pages/advies/advies.component.html
+++ b/src/app/pages/advies/advies.component.html
@@ -21,7 +21,7 @@
             <h4>Verkoop</h4>
             <hr>
             <p>Wilt u een woning verkopen, dan bent u bij ons bij het juiste adres. Met het actieve en betrouwbare netwerk, hebben wij uw woning snel en vakkundig verkocht. </p>
-            <button (click)="onAddPopup()" class="btn-large-other">VERKOOP</button>
+            <button (click)="OnAddPopup()" class="btn-large-other">VERKOOP</button>
         </div>
         <div class="tekst-container-second-two">
             <h4>Aankoop</h4>
@@ -30,7 +30,7 @@
             </p>
             <div>
                 <button class="btn-large-other">AANKOOP</button>
-                <button class="btn-large-other">CONTACT</button>
+                <button (click)="onToAbout()" class="btn-large-other">CONTACT</button>
             </div>
 
         </div>
