--- a/src/app/components/house-detail-new/house-detail-new.component.scss
+++ b/src/app/components/house-detail-new/house-detail-new.component.scss
@@ -1,24 +1,28 @@
+.house-whole {
+    display: grid;
+
+}
+
 .house-detail-container {
     width: 90%;
-    display: flex;
-    flex-direction: column;
     margin: auto;
     margin-bottom: 50px;
-    max-width: 500px;
+    max-width: 350px;
+    cursor: pointer;
 }
 
 .house-detail-first img {
     width: 100%;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 6px 6px 0px 0px;
     object-fit: cover;
 }
 
 .house-detail-second {
     background-color: #F8F8F8;
     padding: 20px;
-    border-radius: 00px 0px 10px 10px;
+    border-radius: 00px 0px 6px 6px;
     margin-top: -10px;
-    cursor: pointer;
+
 }
 
 .house-detail-second:hover img {
@@ -44,7 +48,7 @@
     display: flex;
     align-content: center;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 30px;
     align-items: center;
 }
 
@@ -69,44 +73,23 @@ p {
 
 
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 800px) {
 
-    .house-detail-container {
-        flex-direction: row-reverse;
-        max-width: 1100px;
-        align-items: center;
-        
+    .house-whole {
+        display: grid;
+        grid-template-columns: auto auto;
+        margin: auto;
+        width: 800px;
     }
-
-    .house-detail-first img {
-        border-radius: 10px;
-    }
-
-    .house-detail-first {
-        width: 40%;
-    }
-
-    .house-detail-second {
-        border-radius: 10px;
-        padding: 30px;
-        width: 60%;
-        margin-right: 20px;
-    }
-    
 
 }
 
 @media only screen and (min-width: 1100px) {
 
-    .house-detail-first img {
-        border-radius: 10px;
-        max-height: 400px;
-    }
-
-    .house-detail-container {
-        flex-direction: row-reverse;
-        max-width: 1050px;
-        align-items: center;
+    .house-whole {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        width: 1200px;
     }
 
 }
