--- a/src/app/pages/verkoop/verkoop-details/verkoop-details.component.html
+++ b/src/app/pages/verkoop/verkoop-details/verkoop-details.component.html
@@ -16,7 +16,7 @@
         <div class="description-second">
             <div>
                 <h6>Vierkante Meters</h6>
-                <h3>{{ house.m2 }}</h3>
+                <h3>{{ house.m2 }}㎡</h3>
             </div>
             <div>
                 <h6>Bouwjaar</h6>
