--- a/src/app/pages/verkoop/verkoop-details/verkoop-details.component.scss
+++ b/src/app/pages/verkoop/verkoop-details/verkoop-details.component.scss
@@ -1,3 +1,5 @@
+
+
 img {
     transition: transform .2s ease-in-out;
 }
@@ -93,11 +95,7 @@ img {
   }
   
   .swiper-slide {
-    text-align: center;
-    font-size: 18px;
     background: #fff;
-  
-    /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -114,10 +112,97 @@ img {
   
   .swiper-slide img {
     display: block;
-    width: 800px;
+    width: 100%;
     height: 400px;
     object-fit: cover;
   }
+
+  .swiper-container-pointer-events {
+    touch-action: pan-y;
+}
+
+  .swiper-container {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    list-style: none;
+    padding: 0;
+    z-index: 1;
+}
+
+.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-container-horizontal > .swiper-pagination-bullets {
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+}
+  
+.swiper-pagination {
+    margin-top: 50px;
+}
+
+.swiper-pagination {
+    position: absolute;
+    text-align: center;
+    transition: 300ms opacity;
+    transform: translate3d(0, 0, 0);
+    z-index: 10;
+}
+
+element.style {
+    transform: translate3d(0px, 0px, 0px);
+}
+
+.swiper-container-android .swiper-slide, .swiper-wrapper {
+    transform: translate3d(0px, 0, 0);
+}
+
+.swiper-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    transition-property: transform;
+    box-sizing: content-box;
+}
+
+.swiper-slide {
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide {
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition-property: transform;
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0 4px;
+}
+
+.swiper-pagination-clickable .swiper-pagination-bullet {
+    cursor: pointer;
+}
+
+.swiper-pagination-bullet-active {
+    opacity: 1;
+    background: #F0E2D7!important;
+}
+
+.swiper-pagination-bullet {
+    width: 8px;
+    height: 8px;
+    display: inline-block;
+    border-radius: 50%;
+    background: #000;
+    opacity: 1!important;
+}
   
 
 @media only screen and (min-width: 600px) {
